More amends to fix horizontal scrollbar issue

--- a/sass/components/_header-image.scss
+++ b/sass/components/_header-image.scss
@@ -1,5 +1,5 @@
 .header-image {
-  width: 100vw;
+  width: 100%;
 }
 .header-image, .owl-item .item {
   height: 207px;  
